# GitWatcherBot

./: CMakeLists.txt  Doxyfile.in  LICENSE  README.md  _base64_8hpp.html  _base64_8hpp.js  _base64_8hpp_source.html  _database_8hpp.html  _database_8hpp.js  _database_8hpp_source.html  _final_action_8hpp.html  _final_action_8hpp_source.html  _git_api_8hpp.html  _git_api_8hpp.js  _git_api_8hpp_source.html  _git_bot_8hpp.html  _git_bot_8hpp.js  _git_bot_8hpp_source.html  _log_8hpp.html  _log_8hpp.js  _log_8hpp_source.html  _logger_8hpp.html  _logger_8hpp.js  _logger_8hpp_source.html  _r_e_a_d_m_e_8md.html  _repository_8hpp.html  _repository_8hpp.js  _repository_8hpp_source.html  _user_8hpp.html  _user_8hpp.js  _user_8hpp_source.html  annotated.html  annotated_dup.js  build_and_run.sh  class_database-members.html  class_database.html  class_database.js  class_final_action-members.html  class_final_action.html  class_git_api-members.html  (+54 more)
.github/workflows/: build-docs.yml  build-ubuntu-debug.yml  build-ubuntu-release.yml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+24 more)
src/: GitBot.cpp  GitBot.hpp  Main.cpp
src/api/: GitApi.cpp  GitApi.hpp
src/db/: Database.cpp  Database.hpp
src/db/models/: Log.hpp  Repository.hpp  User.hpp
src/db/models/enums/: UserStatus.inl
src/log/: Logger.hpp
src/utils/: Base64.hpp  FinalAction.hpp
